# KursachChislaki

./: CMakeLists.txt  equationsolve.cpp  input.txt  kursach.cpp  output.txt
matrix/: CMakeLists.txt
matrix/include/: Matrix.h
matrix/src/: Matrix.cpp
parser/: CMakeLists.txt  parser.cpp  parser.h
parser/include/: parser.h
parser/src/: parser.cpp
test/: CMakeLists.txt  mass.txt  reaction.txt  test.cpp
